# DepositoScaccia

./: .gitignore  README.md  test_actions_bad_formatting2.py
04Settembre/: 1 - docker_python_app parte1.ipynb  meteo.py  (+3 more)
26-27-28Agosto/Esercizio5-es2/ricerca_o_calcolo/: crewai_flow.html  pyproject.toml  report.md
26-27-28Agosto/Esercizio5-es2/ricerca_o_calcolo/src/ricerca_o_calcolo/crews/search_summarize/: search_summarize.py
26-27-28Agosto/Esercizio5-es2/ricerca_o_calcolo/src/ricerca_o_calcolo/crews/search_summarize/config/: tasks.yaml
26-27-28Agosto/Esercizio5-es2/ricerca_o_calcolo/src/ricerca_o_calcolo/crews/sum/config/: agents.yaml  tasks.yaml
26-27-28Agosto/Esercizio5-es2/ricerca_o_calcolo/src/ricerca_o_calcolo/tools/: custom_tool.py
26-27-28Agosto/Esercizio6-es3/rag_med/: README.md  crewai_flow.html  pyproject.toml
26-27-28Agosto/Esercizio6-es3/rag_med/docs/: conf.py
26-27-28Agosto/Esercizio6-es3/rag_med/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
26-27-28Agosto/Esercizio6-es3/rag_med/docs/_build/html/.doctrees/: environment.pickle  index.doctree
26-27-28Agosto/Esercizio6-es3/rag_med/docs/_build/html/_sources/: index.rst.txt
26-27-28Agosto/Esercizio6-es3/rag_med/faiss_index_example/: index.faiss  index.pkl
26-27-28Agosto/Esercizio6-es3/rag_med/src/rag_med/: main.py
26-27-28Agosto/Esercizio6-es3/rag_med/src/rag_med/crews/rag_creator/: rag_creator.py
26-27-28Agosto/Esercizio6-es3/rag_med/src/rag_med/crews/rag_creator/config/: agents.yaml  tasks.yaml
26-27-28Agosto/Esercizio6-es3/rag_med/src/rag_med/crews/search_summarize/: search_summarize.py
26-27-28Agosto/Esercizio6-es3/rag_med/src/rag_med/crews/search_summarize/config/: agents.yaml
26-27-28Agosto/Esercizio6-es3/rag_med/src/rag_med/tools/: custom_tool.py  rag_faiss_lmstudio.py
26-27Agosto/Esercizio3/city_state/: pyproject.toml
26-27Agosto/Esercizio3/city_state/src/city_state/: main.py
26Agosto/Esercizio4/internet_search/: pyproject.toml
26Agosto/Esercizio4/internet_search/src/internet_search/: main.py
26Agosto/Esercizio4/internet_search/src/internet_search/crews/duckduckgo_search_crew/config/: agents.yaml
26Agosto/Esercizio4/internet_search/src/internet_search/tools/: custom_tool.py
(+56 files in other folders)
