[project]
name = "rag_med"
version = "0.1.0"
description = "rag-med using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
    "faiss-cpu>=1.12.0",
]

[project.scripts]
kickoff = "rag_med.main:kickoff"
run_crew = "rag_med.main:kickoff"
plot = "rag_med.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
