[project]
name = "city_state"
version = "0.1.0"
description = "city_state using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
]

[project.scripts]
kickoff = "city_state.main:kickoff"
run_crew = "city_state.main:kickoff"
plot = "city_state.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
