[project]
name = "internet_search"
version = "0.1.0"
description = "internet_search using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
    "ddgs>=9.5.4",
]

[project.scripts]
kickoff = "internet_search.main:kickoff"
run_crew = "internet_search.main:kickoff"
plot = "internet_search.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
